appId: ${APP_ID || "com.tanuki75.noctalia"}
---
- runFlow:
    when:
      visible:
        id: screen.onboarding
    commands:
      - runFlow:
          when:
            visible:
              id: component.onboarding.intro
          commands:
            - tapOn:
                id: btn.onboarding.intro.next
            - extendedWaitUntil:
                visible:
                  id: btn.onboarding.path.analyze
                timeout: 10000
      - runFlow:
          when:
            visible:
              id: btn.onboarding.path.analyze
          commands:
            - swipe:
                start: 90%, 10%
                end: 12%, 82%
                duration: 1000
            - tapOn:
                id: btn.onboarding.skip
            - extendedWaitUntil:
                visible:
                  id: screen.recording
                timeout: 10000
